v0.7.2.1 BETA:
  * Extended NPC class
  * Added cheat values. Some cheat can now be toggled by value. (Defines.* namespace)

v0.7.2 BETA:
  * Extended Level class and World class (Overworld)
  * Extended Player class
  * Extended Section Class
  * Extended Graphics Namespace
  * Extended Block class
  * Extended NPC class
  * Added Section Namespace (Static functions for Section class)
  * Added some new Defines (Defines.* namespace)
  * Added switch between letterbox-mode (forced 4:3) or scretched-mode via F4
  * Bugfix [LunaLua and SMBX Engine]: Decimal numbers now work perfectly in layer speed and npc codes (Thanks to DarkMecha for testing!)
  * Bugfix [LunaLua and SMBX Engine]: Fullscreen in the level editor works again!
  * Added printTextWP, drawImageWP, drawImageToSceneWP which enables rendering with priority settings (also known as Z-Index)
  * Added sounds.ini on level-basis


v0.7.1.1 BETA:
  * Added comparing operator for some LunaLua classes.
  * Added PlayerSettings-Class
  * Added PNG support for custom level items (i.e. npc-1.png)
  * Fixed screenshot-function (With changes: PNG-Format and filename is now date + time)
  * Added experimental gif recorder using FreeImage library. Can be toggled with F11. Don't record for too long or it may crash due to memory overflow (too much frames to encode)
  * Added Graphics.isOpenGLEnabled() for checking if the new renderer is active.
  * Replacing WIC-functions with FreeImage
  * Added Level class for overworld